    parameters will have entity-name and field-name attributes, and the
    auto-fields-service now looks for those to do better fields based on
    the entity field details
- Entity Facade
  - Added datasource.@startup-add-missing option; set to true to check
    tables for all entities in the database on startup and create missing
    ones
  - Entity find on a view-entity now automatically determines which
    member-entities to join in based on the fields selected, in order by,
    and in conditions; with this in place the need for DynamicViewEntity is
    minimal because you can just select the relevant fields and not worry
    about tables being joined in to the query that are not needed; this
    makes it much easier to write queries that will run well on large
    databases
  - Support for java.util.UUID sequenced primary IDs; can be configured
    per-entity and/or per-datasource
- Resource Facade
  - ExampleContent entity and corresponding screen that supports
    uploading and downloading JCR content
  - Support for username and password for remote JCR repository access
- Fleshed out ValidationError functionality including display in apps.xml
  and considering the ec.message.validationErrors list for storing error
  details in session between redirects, and changed entity and service
  validation to add ValidationErrors instead of plain error Strings
- Screen in Tools app for SQL Query Run/View
- Improved classpath overrides for configuration and such in the
  runtime/classes directory for both add-runtime/addRuntime and executable
  WAR file deployment approaches

Non-backward-compatible changes:

- Removed id-very-long entity field type and increased default length of id
  type to 40 and id-long type to 255.
- Changed *SubscreensItem.userId* to *userGroupId* for greater flexibility
  setting up subscreen structures and menus
-- this is consistent with how other database-driven artifacts are
   structured