@@ -548,6 +548,7 @@ This Work includes contributions authored by David E. Jones, not as a
                 </xs:restriction></xs:simpleType>
             </xs:attribute>
             <xs:attribute name="always-use-constraint-keyword" default="false" type="boolean"/>
+            <xs:attribute name="use-schema-for-all" default="false" type="boolean"/>
             <xs:attribute name="table-engine" type="xs:string"/>
             <xs:attribute name="character-set" type="xs:string"/>
             <xs:attribute name="collate" type="xs:string"/>
